crates/rome_cli/tests/snapshots/main_cases_config_extends/extends_config_ok_formatter_no_linter.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{ "extends": ["format.json", "linter.json"] }
```

## `format.json`

```json
{ "javascript": { "formatter": { "quoteStyle": "single" } } }
```

## `linter.json`

```json
{ "linter": { "enabled": false } }
```

## `test.js`

```js
debugger; console.log("string"); 
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  


```

# Emitted Messages

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Formatter would have printed the following content:
  
    1   │ - debugger;·console.log("string");·
      1 │ + debugger;
      2 │ + console.log('string');
      3 │ + 
  

```

```block
test.js internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Fixes applied to the file, but there are still diagnostics to address.
  

```

```block
Checked 1 file(s) in <TIME>
```


