crates/rome_cli/tests/snapshots/main_cases_config_extends/extends_resolves_when_using_config_path.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `config/format.json`

```json
{ "javascript": { "formatter": { "quoteStyle": "single" } } }
```

## `config/linter.json`

```json
{ "linter": { "enabled": true } }
```

## `config/rome.json`

```json
{ "extends": ["format.json", "linter.json"] }
```

## `test.js`

```js
debugger; console.log("string"); 
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  


```

# Emitted Messages

```block
test.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ debugger; console.log("string");·
      │ ^^^^^^^^^
  
  i Suggested fix: Remove debugger statement
  
    1 │ debugger;·console.log("string");·
      │ ----------                       

```

```block
test.js lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Fixes applied to the file, but there are still diagnostics to address.
  

```

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Formatter would have printed the following content:
  
    1   │ - debugger;·console.log("string");·
      1 │ + debugger;
      2 │ + console.log('string');
      3 │ + 
  

```

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  

```

```block
Checked 1 file(s) in <TIME>
```


